# Projeto_autenticacao_JWT

./: docker-compose.yml  pyproject.toml
app/: UserAuth.py  depends.py  main.py  routers.py  schemas.py
app/database/: models.py
migrations/: env.py
migrations/versions/: 4b0eee72c99e_add_email_to_users.py  7e9067fbbcea_add_table_user.py  97640400a14b_add_users_table.py
